--- a/pom.xml
+++ b/pom.xml
@@ -116,8 +116,21 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
-			<version>1.1.1</version>
+			<version>1.9.13</version>
 		</dependency>
+		
+		<dependency><groupId>commons-httpclient</groupId>
+		<artifactId>commons-httpclient</artifactId>
+		<version>3.1</version>
+		</dependency>
+		
+		<dependency>
+		<groupId>javax.ws.rs</groupId>
+		<artifactId>javax.ws.rs-api</artifactId>
+		<version>2.0.1</version>
+		</dependency>
+		
+
 
 		<!-- spring -->
 		<dependency>
