--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.wait</groupId>
 	<artifactId>first-jax-rs</artifactId>
 	<packaging>war</packaging>
-	<version>first-jax-rs-0.0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>first-ws Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
@@ -48,8 +48,15 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
 				<configuration>
-					<preparationGoals>clean deploy -DskipTests</preparationGoals>
+				<!-- 	<preparationGoals>clean deploy -DskipTests</preparationGoals> -->
 				</configuration>
+				  <dependencies>
+        <dependency>
+            <groupId>org.apache.maven.scm</groupId>
+            <artifactId>maven-scm-provider-gitexe</artifactId>
+            <version>1.9.1</version>
+        </dependency>
+    </dependencies>
 			</plugin>
 
 		</plugins>
