--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.wait</groupId>
 	<artifactId>first-jax-rs</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>first-ws Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
@@ -252,7 +252,7 @@
 		<connection>scm:git:https://github.com/mwait/first-jax-rs.git</connection>
 		<developerConnection>scm:git:https://github.com/mwait/first-jax-rs.git</developerConnection>
 		<url>https://github.com/mwait/first-jax-rs</url>
-	  <tag>first-jax-rs-0.0.1-SNAPSHOT</tag>
+	  <tag>first-jax-rs-0.0.2</tag>
   </scm>
    
 
