--- a/pom.xml
+++ b/pom.xml
@@ -249,8 +249,10 @@
 	</distributionManagement> -->
 
 	<scm>
-		<connection>scm:git:https://github.com/mwait/first-jax-rs.git</connection>
-		<developerConnection>scm:git:https://github.com/mwait/first-jax-rs.git</developerConnection>
+		<!--<connection>scm:git:https://github.com/mwait/first-jax-rs.git</connection>-->
+		<!--<developerConnection>scm:git:https://github.com/mwait/first-jax-rs.git</developerConnection>-->
+		<connection>scm:git:git://github.com/mwait/first-jax-rs.git</connection>
+		<developerConnection>scm:git:git@github.com/mwait/first-jax-rs.git</developerConnection>
 		<url>https://github.com/mwait/first-jax-rs</url>
 	<!--  <tag>first-jax-rs-0.0.1-SNAPSHOT</tag> -->
   </scm>
