--- a/pom.xml
+++ b/pom.xml
@@ -254,7 +254,7 @@
 		<connection>scm:git:git://github.com/mwait/first-jax-rs.git</connection>
 		<developerConnection>scm:git:git@github.com/mwait/first-jax-rs.git</developerConnection>
 		<url>https://github.com/mwait/first-jax-rs</url>
-	<!--  <tag>first-jax-rs-0.0.1-SNAPSHOT</tag> -->
+	 <tag>first-jax-rs-0.0.5-SNAPSHOT</tag>
   </scm>
    
 
